# stock_cli

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: schema.sql
src/: database.rs  file.rs  fundamentals.rs  main.rs  scraper.rs
src/database/: cmd.rs  database.rs  queries.rs
src/errors/: error_handler.rs
src/file/: cmd.rs  queries.rs
src/scraper/: financial_data.rs
