[package]
name = "cli_stock"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0"
tokio-test = "0"
thiserror = "1"
scraper = "0.12.0"
regex = "1"
chrono = "0"
chronoutil = "0"
rpassword = "7"
cssparser = "0"
time = "0.3"